

group = 'com.vzome'
version = '6.0'

task wrapper(type: Wrapper) {
   gradleVersion = '4.5.1' //version required
}

// Specify common settings for all subprojects
subprojects {

  apply plugin: 'java'
  apply plugin: 'maven'
  apply plugin: 'eclipse'

  compileJava {
	// set these to 9 for Java 9
	// set them to 1.8 for Java 8
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
  }

  repositories {
    mavenLocal()
    mavenCentral()
    
    // this one is for javax.media.jai
    maven { url 'http://repository.springsource.com/maven/bundles/external' }

    ivy { // not really an Ivy repo, but this pattern lets us automate the bare JAR downloads for java3d/*
      url "http://jogamp.org/deployment"
      layout "pattern", {
        artifact "[organization]/[revision]/[artifact].[ext]"
      }
    }
  }

  // see platform/mac/build.gradle, search for "error -5341"
  //    buildDir    = rootProject.buildDir
  group       = rootProject.group
  version     = rootProject.version
  description = rootProject.name + '-' + project.name
}

project(':desktop') {
    dependencies {
        compile project(':core')
    }
}

project(':server') {
    dependencies {
        compile project(':desktop')
    }
}

